--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel = "stylesheet" type = "text/css" href = "style.css">
 </head>
     <body>
-        <div id = "container">
+        <div id = "container jumboTainer">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                     <h1 class="display-4">New York Times Search</h1>
